--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
          <li><a href="recommendations.html">Recommended Tracks</a></li>
       </ul>
    </nav>
+   <div style="height:50px"></div>
    <div class="container">
       <h1>Spotify Playlist Generator</h1>
       <div class="form-container">
