--- a/recommendations.html
+++ b/recommendations.html
@@ -14,6 +14,7 @@
            <li><a href="recommendations.html">Recommended Tracks</a></li>
         </ul>
      </nav>
+     <div style="height:50px"></div>
    <div class="container">
       <h1>Recommended Tracks</h1>
       <div id="recommended-tracks" class="playlist-results"></div>
