--- a/saved.html
+++ b/saved.html
@@ -15,6 +15,7 @@
          <li><a href="recommendations.html">Recommended Tracks</a></li>
       </ul>
    </nav>
+   <div style="height:50px"></div>
    <div class="container">
       <h1>Saved Tracks</h1>
       <div id="saved-tracks" class="playlist-results"></div>
