--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Spotify Playlist Generator</title>
+   <title>AudioAdvent</title>
    <link rel="stylesheet" href="style.css">
    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
@@ -17,7 +17,7 @@
    </nav>
    <div style="height:50px"></div>
    <div class="container">
-      <h1>Spotify Playlist Generator</h1>
+      <h1>AudioAdvent</h1>
       <div class="form-container">
          <div class="input-container">
             <label for="search-input">Enter your preferences:</label>
